# polars-explorer

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: rust-clippy.yml
polars-explorer/: Changelog.md  README.md  TASKS.MD  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
polars-explorer/polars-playground/: Cargo.toml
polars-explorer/polars-playground/src/: main.rs
polars-explorer/src/: App.css  App.tsx  Typing.ts  main.tsx
polars-explorer/src-tauri/: Cargo.toml  tauri.conf.json
polars-explorer/src-tauri/src/: Channels.rs  Commands.rs  Filesystem.rs  FrameView.rs  FrameViewManager.rs  LoadedFrame.rs  Payload.rs  Query.rs  State.rs  dataframe.rs  filesystem.rs  lib.rs  main.rs  query.rs  typing.rs
polars-explorer/src-tauri/test-csv-generator/: Cargo.toml
polars-explorer/src-tauri/test-csv-generator/csv/: 1.csv  basetypes_with_misalignment0.csv  basetypes_with_misalignment1.csv  well_formatted_basetypes0.csv  well_formatted_basetypes1.csv  well_formatted_basetypes_with_missing_values0.csv  well_formatted_basetypes_with_missing_values1.csv
polars-explorer/src-tauri/test-csv-generator/src/: main.rs
polars-explorer/src/components/: DataExplorerPanel.tsx  DataFramePanel.tsx  DataViewPanel.tsx  DataframePanel.tsx  DataviewPanel.tsx  FrameViewPanel.tsx  Menu.tsx  QueryPanel.tsx
polars-explorer/src/components/dataexplorer/: DataTable.tsx  PaginationControl.tsx
polars-explorer/src/components/dataexplorer/datatable/: dataTableSlice.ts
polars-explorer/src/components/dataexplorer/pagination/: NextPage.tsx  PreviousPage.tsx  TurnPage.tsx  paginationSlice.ts
polars-explorer/src/components/dataframe/: DataFrame.tsx  DataFrameList.tsx  FrameView.tsx  dataFrameSlice.ts
polars-explorer/src/components/datagrid/: DataCell.tsx  DataHeader.tsx  DataTable.tsx
polars-explorer/src/components/dataview/: DataTable.tsx  NextPage.tsx  PaginationControl.tsx  PreviousPage.tsx  paginationSlice.ts
polars-explorer/src/components/frameview/: FrameViewInfo.tsx  FrameViewTree.tsx  frameViewSlice.ts
polars-explorer/src/components/frameview/info/: ApplyFilter.tsx  ColumnSelector.tsx  FrameViewShape.tsx
polars-explorer/src/components/frameview/tree/: FrameTreeItem.tsx  FrameView.tsx  FrameViewSelector.tsx  ViewTreeItem.tsx
polars-explorer/src/components/frameview/tree/contextmenu/: FrameContext.tsx  RenameDialog.ts  ViewContext.tsx
polars-explorer/src/components/query/: QueryPlan.tsx
polars-explorer/src/components/ui/: pagination.tsx
polars-explorer/src/hooks/: DataFrame.ts  Dataview.ts
polars-explorer/src/redux/: store.ts
polars-explorer/src/redux/slices/: dataTableSlice.ts  frameViewSlice.ts  paginationSlice.ts
polars-explorer/src/redux/thunks/: frameViewThunk.ts
polars-explorer/src/services/: backend.ts  channelSlice.ts  channels.ts  commands.ts
