[package]
name = "polars-explorer"
version = "0.2.5"
description = "A Data Explorer for Rust Polars"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polars_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.15.0", features = ["file-handle-inner"] }
polars = { version = "0.44.2", features = ["lazy", "csv", "serde", "describe"] }


# Try to improve compilation speed
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
incremental = true

[profile.dev]
opt-level = 0
overflow-checks = false     # Disable integer overflow checks.
debug = "line-tables-only"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"